tdf#100594 Calculate nFrac with fNumber for Forced Denominator

nFrac was calculated with fraction value = nFrac/nDiv which could be rounded
in case of few digits in nDiv

Change-Id: I568121b0e7b5ea0b67bbff7bbbb37d2c272c3691